<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <io.rong.imkit.widget.AsyncImageView
        android:id="@+id/img_Group_portrait"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:src="@drawable/add_group_head" />

    <cn.rongcloud.im.server.widget.ClearWriteEditText
        android:id="@+id/create_groupname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:singleLine="true"
        android:background="@drawable/baojia_conersation_input_bg"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:hint="@string/edit_group_name"
        android:maxLength="10" />



    <cn.rongcloud.im.server.widget.ClearWriteEditText
        android:id="@+id/create_group_brief"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/baojia_conersation_input_bg"
        android:layout_marginTop="30dp"
        android:gravity="left|top"
        android:padding="@dimen/activity_horizontal_margin"
        android:hint="@string/edit_group_brief"
        android:maxLength="10" />

    <Button
        android:id="@+id/create_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rs_select_btn_blue"
        android:text="@string/confirm"
        android:textColor="#FFF" />

</LinearLayout>