<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#161515"
                android:layout_gravity="center_horizontal"
                android:text="@string/baojia_amount_remained"/>

            <TextView
                android:id="@+id/tv_ammount_remained"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ea0d0d"
                android:layout_marginTop="8dp"
                android:textSize="24sp"
                android:text="0 币"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#161515"
                android:layout_gravity="center_horizontal"
                android:text="@string/baojia_platform_remained"/>

            <TextView
                android:id="@+id/tv_platform_remained"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ea0d0d"
                android:layout_marginTop="8dp"
                android:textSize="24sp"
                android:text="0 币"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/baojia_transfer_input_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="金额"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"/>

        <EditText
            android:id="@+id/et_input_recharge"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_gravity="center_vertical"
            android:gravity="right|center_vertical"
            android:background="@null"
            android:hint="0.00"
            android:maxLines="1"
            android:inputType="numberDecimal"
            android:layout_marginRight="3dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="币"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="8dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_recharge_mine_ammount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/transfer_sure_btn_bg"
        android:textColor="#fff"
        android:text="@string/baojia_recharge"/>


    <Button
        android:id="@+id/btn_recharge_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/transfer_sure_btn_bg"
        android:textColor="#fff"
        android:text="@string/baojia_history"/>

</LinearLayout>