<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ebebeb"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/start_user_profile"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true"
        android:orientation="horizontal">

        <cn.rongcloud.im.server.widget.SelectableRoundedImageView
            android:id="@+id/mine_header"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="14dp"
            android:scaleType="centerCrop"
            app:sriv_left_bottom_corner_radius="3dip"
            app:sriv_left_top_corner_radius="3dip"
            app:sriv_right_bottom_corner_radius="3dip"
            app:sriv_right_top_corner_radius="3dip" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/mine_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/seal_mine_fragment_user_portrait"
                android:textColor="@color/text_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_user_syncname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="3dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_marginLeft="14dp"
                android:textColor="@color/text_color"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_receive_money"
        android:layout_width="match_parent"
        android:layout_height="45.5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:gravity="center"
            android:drawableLeft="@drawable/baojia_mine_money"
            android:drawablePadding="14sp"
            android:text="@string/baojia_mine_corn"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:src="@drawable/baojia_mine_right_arrow"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.25dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:background="#dfdfdd" />

    <RelativeLayout
        android:id="@+id/rl_mine_collections"
        android:layout_width="match_parent"
        android:layout_height="45.5dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:gravity="center"
            android:drawableLeft="@drawable/baojia_mine_collect"
            android:drawablePadding="14sp"
            android:text="@string/baojia_mine_collection"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:src="@drawable/baojia_mine_right_arrow"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.25dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:background="#dfdfdd" />

    <RelativeLayout
        android:id="@+id/rl_mine_settings"
        android:layout_width="match_parent"
        android:layout_height="45.5dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:drawableLeft="@drawable/baojia_mine_colletion"
            android:drawablePadding="14sp"
            android:gravity="center"
            android:text="@string/baojia_mine_settings"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:src="@drawable/baojia_mine_right_arrow"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/mine_xiaoneng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:visibility="gone"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fff">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.25dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:background="#dfdfdd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45.5dp"
            android:background="@drawable/btn_list_item_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="14dp"
                android:drawableLeft="@drawable/mine_service"
                android:drawablePadding="14sp"
                android:text="@string/main_customer_xn"
                android:textColor="@color/text_color"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#fff">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.25dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:background="#dfdfdd" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_mine_wallet"
        android:layout_width="match_parent"
        android:layout_height="45.5dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:drawablePadding="14sp"
            android:gravity="center"
            android:drawableLeft="@drawable/baojia_mine_money"
            android:text="@string/baojia_mine_wallet"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:src="@drawable/baojia_mine_right_arrow"/>

    </RelativeLayout>


</LinearLayout>